# facebook-api-rs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.json
examples/seed/: Cargo.toml  README.md
examples/seed/src/: facebook.rs  instagram.rs  lib.rs  structs.rs
src/: account.rs  accounts.rs  client.rs  code.rs  data.rs  extract_query_fragments.rs  image.rs  lib.rs  main.rs  me.rs  me_api.rs  pages_api.rs  redirect_url.rs  response_type.rs  sign_in.rs  token.rs
src/graph/: client.rs  data.rs  image.rs  mod.rs
src/graph/accounts/: mod.rs
src/graph/batch/: mod.rs  request.rs
src/graph/business/: mod.rs
src/graph/feed/: mod.rs
src/graph/getPosts/: mod.rs
src/graph/get_posts/: mod.rs
src/graph/instagram/: mod.rs
src/graph/instagram/account/: mod.rs
src/graph/instagram/hashtag/: mod.rs
src/graph/instagram/media/: mod.rs
src/graph/instagram/publish/: mod.rs
src/graph/me/: mod.rs
src/graph/pages/: chunk_data.rs  feed.rs  mod.rs  photo.rs  post.rs  search.rs  utils.rs  video.rs
src/graph/pages/form_data/: mod.rs  reqwest_form.rs  web_sys_form.rs
src/graph/pages/media_upload/: mod.rs  video_by_reqwest.rs  video_by_seed.rs  video_by_web_sys.rs
src/graph/post/: mod.rs
src/graph/utils/: file_analyze.rs  mod.rs  structs.rs
src/graph/video/: mod.rs
src/login/: config.rs  login.rs  login_parameters.rs  mod.rs  redirect_url.rs  response_type.rs  token.rs
src/universal/: client.rs  client_request.rs  errors.rs  mod.rs  reqwest.rs  response.rs  seedClient.rs  seed_client.rs  web_sys.rs  web_sys_client.rs
src/universal/clients/: media.rs
src/universal/form_data/: mod.rs
src/universal/utils/: mod.rs
