[package]
name = "facebook_api_rs"
version = "0.1.0"
description = "App Description"
categories = ["wasm"]
license = "MIT"
readme = "./README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]
all-features = false

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
default = [ "web_sys_async" ]
reqwest_async = [ "reqwest"]
web_sys_async = [ "web-sys"]

[dependencies]
serde = { version = "1", features = ["derive","rc"] }
serde_json = "1.0"
async-trait = "0.1.50"
rand = "0.8.4"
urlencoding = "2.1.0"
indexmap = "1.8.0"

futures-util = "0.3.21"
chrono = { version = "0.4.6", features = ["serde", "wasmbind"] }

web-sys = {version = "0.3.40",  optional = true,features = [
    "File",
    "Blob",
    "FormData",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "XmlHttpRequestEventTarget",
]}

http = "0.2.5"
url = { version = "2"}

thiserror = "1.0.30"
    [dependencies.reqwest]
    version = "0.11.8"
    features = [ "gzip", "json","multipart","stream","blocking" ]
    optional = true
    [dependencies.http-types]
    version = "2.10"
    optional = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os']





