[package]
name = "facebook_api_rs"
version = "0.1.0"
authors = ["Azibodusi osain"]
description = "A Rust client library for the Facebook Graph API v23.0, with full support for both native and WebAssembly (WASM) environments"
documentation = "https://docs.rs/facebook_api_rs"
homepage = "https://github.com/osain-az/facebook-api-rs"
repository = "https://github.com/osain-az/facebook-api-rs"
keywords = ["facebook", "graph-api", "instagram", "oauth", "wasm"]
categories = ["api-bindings", "web-programming", "wasm", "authentication"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.63"
exclude = [
    ".github/",
    ".gitignore",
    "examples/seed/target/",
    "target/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
web-sys = [ "dep:web-sys"]


[dependencies]
serde = { version = "1", features = ["derive","rc"] }
serde_json = "1.0"
async-trait = "0.1.50"
rand = "0.8.4"
urlencoding = "2.1.0"

#futures-util = "0.3.21"
chrono = { version = "0.4.6", features = ["serde", "wasmbind"] }

web-sys = {version = "0.3.40",  optional = true,features = [
    "File",
    "Blob",
    "FormData",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "XmlHttpRequestEventTarget",
]}

http = "1.0"
url = { version = "2"}

thiserror = "1.0.30"
    [dependencies.reqwest]
    version = "0.12.23"
    features = [ "gzip", "json","multipart","stream" ]
    optional = true
    [dependencies.http-types]
    version = "2.10"
    optional = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os']





