[package]
name = "facebook_api_rs"
version = "0.1.1"
authors = ["Azibodusi osain"]
description = "A Rust client library for the Facebook Graph API v23.0, with full support for both native and WebAssembly (WASM) environments"
documentation = "https://docs.rs/facebook_api_rs"
homepage = "https://github.com/osain-az/facebook-api-rs"
repository = "https://github.com/osain-az/facebook-api-rs"
keywords = ["facebook", "graph-api", "instagram", "oauth", "wasm"]
categories = ["api-bindings", "web-programming", "wasm", "authentication"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.63"
exclude = [
    ".github/",
    ".gitignore",
    "examples/seed/target/",
    "target/",
]

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
web-sys = [ "dep:web-sys"]


[dependencies]
serde = { version = "1.0.228", features = ["derive","rc"] }
serde_json = "1.0.145"
async-trait = "0.1.89"
rand = "0.8.5"
urlencoding = "2.1.3"

#futures-util = "0.3.21"
chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }

web-sys = {version = "0.3.81",  optional = true,features = [
    "File",
    "Blob",
    "FormData",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "XmlHttpRequest",
    "XmlHttpRequestUpload",
    "XmlHttpRequestEventTarget",
]}

http = "1.3.1"
url = { version = "2.5.7"}

thiserror = "2.0.17"
    [dependencies.reqwest]
    version = "0.12.23"
    features = [ "gzip", "json","multipart","stream" ]
    optional = true
    [dependencies.http-types]
    version = "2.12.0"
    optional = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os']





