[package]
name = "facebook-manual-flow-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seed = {git  ="https://github.com/seed-rs/seed", branch="master"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
